Added edit bio on profile functionality

--- a/client/templates/userprofile/profile.html
+++ b/client/templates/userprofile/profile.html
@@ -6,7 +6,7 @@
 	<div class="profile-content">
 	<i class="stick-right edit-bio fa fa-cog fa-2x"></i>
 	<h1>{{profile.username}} </h1>
-	<p>{{profile.biography}} </p>
+	<p id="biography">{{profile.biography}} </p>
 
 
 	</div>
@@ -15,22 +15,20 @@
 
 	
 <div class="panel-body">
-		<p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
 
-	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.   
-	</p>
 	<div class="heroic-panel">
 		<p class="numerator">8</p> Courses completed
 	</div>
 	<div class="heroic-panel">
-		<p class="numerator">126</p> Badges
+		<p class="numerator">126</p> Courses administrated
+	</div>
+	<div class="heroic-panel">
+		<p class="numerator">126</p> Courses contributed to
 	</div>
 	<div class="heroic-panel">
 		<p class="numerator">126</p> Badges
 	</div>
-	<div class="heroic-panel">
-		<p class="numerator">126</p> Badges
-	</div>
+
 	<div class="story-panel">
 		Joined 13 May, 2012
 	</div>
