--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -76,7 +76,9 @@
 
                     class="form-control"
                     id="biography"
-                    value="{{profile.biography}}"></textarea>
+                    value="">
+
+            </textarea>
         </div>
         <div class ="form   -group">
             <button id="saveChanges">Save Changes</button>
