added restrictions to biograpgy length

--- a/client/templates/userprofile/profile.html
+++ b/client/templates/userprofile/profile.html
@@ -6,6 +6,7 @@
 	<div class="profile-content">
 	<i class="stick-right edit-bio fa fa-cog fa-2x"></i>
 	<h1>{{profile.username}} </h1>
+	<p id="bio-error"></p>
 	<p id="biography">{{profile.biography}} </p>
 
 
