--- a/client/templates/userprofile/profile.less
+++ b/client/templates/userprofile/profile.less
@@ -6,6 +6,10 @@
 	border-width: 5px;
 }
 
+#bio-error {
+	color:red;
+}
+
 .profile-picture {
 	margin-top: 20px;
 	margin-left:20px;
@@ -36,7 +40,7 @@
 	height:100px;
 	float:left;
 	line-height: 100px;
-	text-align: center;
+	text-align: center;	
 	font-size: 1.2em;
 	background-color: #E4E4E4;
 	margin-top: 30px;
