--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -68,7 +68,7 @@
          </div>
 
         <div class="form-group">
-            <p class="bio_errors">TODO</p>
+            <p id="bio-error"></p>
             <label for="Email">
                 {{ mf 'userProfile-bio-label' 'Biography' }}
             </label>
