changed dead link + commenting out

--- a/client/templates/layouts/header/_header.html
+++ b/client/templates/layouts/header/_header.html
@@ -35,7 +35,7 @@
                             {{ mf '_header-teachTab-linkText' 'Teach' }}
                         </a>
                         {{else}}
-                        <a href="#">
+                        <a href="{{ pathFor 'atSignIn' }}">
                         <i class="fa fa-university"></i>&nbsp;
                             {{ mf '_header-teachTab-login' 'Login to Teach' }}
                         </a>
