--- a/client/templates/userprofile/profile.html
+++ b/client/templates/userprofile/profile.html
@@ -26,6 +26,8 @@
 	<div class="heroic-panel">
 		<p class="numerator">126</p> Courses contributed to
 	</div>
+	
+	<!-- Badges is for later use -->
 	<div class="heroic-panel">
 		<p class="numerator">126</p> Badges
 	</div>
