--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -12,7 +12,9 @@
 		<h2 class="userprofile-sub-title">
 				{{ mf 'userProfile-subheading-basics' 'Basics'}}
 		</h2>
-		<div class="form-group {{#if realerror}}has-error{{/if}}">
+
+        <!-- Real Name is for later use -->
+		<!-- <div class="form-group {{#if realerror}}has-error{{/if}}">
             <p class="profile_errors">{{realerror}}</p>
                 <label for="Real Name">
                     {{ mf 'userProfile-realname-label' 'Real Name' }}
@@ -22,7 +24,7 @@
                        class="form-control"
                        id="realName"
                        value="{{profile.realname}}">
-            </div>
+            </div> -->
          <div class="form-group {{#if usererror}}has-error{{/if}}">
              <p class="profile_errors">{{usererror}}</p>
                 <label for="Username">
