--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -81,6 +81,7 @@
                     value="">
 
             </textarea>
+            <p class="statusbio"></p>
         </div>
         <div class ="form   -group">
             <button id="saveChanges">Save Changes</button>
