--- a/client/templates/layouts/header/languageSelection/languageSelection.html
+++ b/client/templates/layouts/header/languageSelection/languageSelection.html
@@ -3,6 +3,7 @@
         <select class="form-control language-selection">
             <option value="en">English</option>
             <option value="fi">Finnish</option>
+            <option value="de">German</option>
             <option value="ru">Russian</option>
         </select>
     </ul>
