--- a/client/templates/layouts/header/languageSelection/languageSelection.html
+++ b/client/templates/layouts/header/languageSelection/languageSelection.html
@@ -4,6 +4,7 @@
             <option value="en">English</option>
             <option value="fi">Finnish</option>
             <option value="de">German</option>
+            <option value="de">Persian</option>
             <option value="ru">Russian</option>
         </select>
     </ul>
