Changed button to submit type.

--- a/client/templates/course/sidebar/section/add-lesson/add-lesson.html
+++ b/client/templates/course/sidebar/section/add-lesson/add-lesson.html
@@ -5,7 +5,7 @@
                class="lesson-name form-control"
                placeholder="{{ mf 'sectionAddLesson-lessonNamePlaceholderText' 'Lesson name..'}}" />
         <span class="input-group-btn">
-            <button class="btn btn-success add-lesson-button" type="button">
+            <button class="btn btn-success add-lesson-button" type="submit">
                 {{ mf 'sectionAddLesson-addLessonButtonText' 'Add' }}
             </button>
         </span>
