Pass in activeLesson

--- a/client/templates/course/lesson/lesson.html
+++ b/client/templates/course/lesson/lesson.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-7 col-md-9">
         <div class="panel panel-default">
             <div class="panel-heading">
-              {{> lessonName name=name }}
+              {{> lessonName name=name activeLesson=activeLesson }}
             </div>
             <div class="panel-body">
               {{> lessonText text=text activeLesson=activeLesson }}
