--- a/client/templates/course/title/title.html
+++ b/client/templates/course/title/title.html
@@ -1,6 +1,6 @@
 <template name="courseTitle">
     <h1 class="panel-heading">
-        {{# if editingCourse }}
+        {{# if editingThisCourse }}
             {{> editableText
                 collection="courses"
                 field="title"
