Renamed .statusbio to bioCharactersLeft

--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -81,7 +81,7 @@
 		value="">
 
 	</textarea>
-	<p id="statusbio"></p>
+	<p id="bioCharactersLeft"></p>
 </div>
 <div class ="form   -group">
 	<button id="saveChanges">Save Changes</button>
