--- a/client/templates/layouts/header/_header.html
+++ b/client/templates/layouts/header/_header.html
@@ -49,10 +49,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-user"></i> {{ currentUser.profile.name }} <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-user"></i> <i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                        <li>    <a href="#">Hello {{usermail}}</a>
+                        <li>    <a href="#">Hello {{currentUser.username}}</a>
                         </li>
                         <li >
                                 <a href="{{ pathFor 'profile' }}">
