--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -37,7 +37,7 @@
                     {{ mf 'userProfile-subheading-security' 'Security'}}
                 </h2>
 
-                {{#autoForm id="PasswordEdit" collection="Meteor.users"  doc=currentUser type="method-update" meteormethod="changePassword" validation="keyup"}}
+            {{#autoForm id="PasswordEdit" collection="Meteor.users"  doc=currentUser type="method-update" meteormethod="changeUserPassword" validation="submit"}}
 
                 <div class="formgroup {{#if afFieldIsInvalid name='password'}} has-error{{/if}}">
                     {{> afQuickField name="password"  }}
@@ -45,6 +45,9 @@
 
                 <div class="formgroup {{#if afFieldIsInvalid name='password'}} has-error{{/if}}">
                     {{> afQuickField name="passwordCheck" label="Confirm Password" }}
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
 
             {{/autoForm}}
