--- a/client/templates/userprofile/profile.html
+++ b/client/templates/userprofile/profile.html
@@ -55,7 +55,7 @@
             </ul>
         </div>
         <div class="profile-courses">
-            <h2>{{profile.username}}'s Courses</h2>
+            <h2>{{thisUser.username}}'s Courses</h2>
             <hr>
             <ul class="profile-courses-list">
                 <li>
