Changing template functions to callback

--- a/client/templates/userprofile/settings.html
+++ b/client/templates/userprofile/settings.html
@@ -11,7 +11,7 @@
         <div class="panel-body">
             <h2 class="userprofile-sub-title">
                 {{ mf 'userProfile-subheading-basics' 'Basics'}}
-            </h2> {{#autoForm id="UserProfileEdit" collection="Meteor.users" doc=currentUser type="method-update" meteormethod="User.update" validation="keyup" }}
+            </h2> {{#autoForm id="UserProfileEdit" collection="Meteor.users" doc=currentUser type="update" validation="keyup" }}
             <div id="profileSuccess" class="alert alert-success" style="display:none;" role="alert">
                 <span id="profileSuccessMessage" class="has-error" aria-hidden="true"></span>
                 <span class="sr-only"></span>
