true/false template

--- a/client/templates/course/lesson/quiz/questions/partials/trueOrFalse.html
+++ b/client/templates/course/lesson/quiz/questions/partials/trueOrFalse.html
@@ -1,7 +1,14 @@
 <template name="trueOrFalseTemplate">
     <div >
 
+
         {{>editableTitleDescription}}
+
+        <!-- TrueOrFalseSchema -->
+
+    {{#autoForm id="trueFalseQuestion" schema="TrueOrFalseSchema" validation="keyup"}}
+        {{> afQuickField radio="true" name="group" options="allowed" }}
+    {{/autoForm}}
 
         <div class="form-inline">
             <input type="radio" id="1-{{question.id}}"
